--- a/frontend/src/NovaPessoa.css
+++ b/frontend/src/NovaPessoa.css
@@ -1,7 +1,7 @@
 .AdicionarBtn1 {
   flex: 1;
   min-width: 200px;
-  background-color: #573fc4;
+  background-color: #333;
   border: 0px;
   border-radius: 10px;
   padding: 16px;
