--- a/frontend/src/ListaPresentes.css
+++ b/frontend/src/ListaPresentes.css
@@ -1,35 +1,59 @@
 .container-lista-presenca {
-  background-color: #e0f7fa;
+  background-color: #2b2828;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   max-width: 700px; 
   margin-right: 80px;
   margin-top: 32px;
+  box-shadow: 0px 0px 3px black;
 }
 
-.item-pessoa {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 12px;
-  margin-bottom: 12px;
+.titulo{
+  font-size: 24px;
+  font-weight: 600;
+  color: #ffffff;
+  margin-bottom: 24px;
+  padding-bottom: 8px;
+  text-align: center;
+}
+
+.nenhum-visitante{
+  color: #d3d3d3;
+  font-style: oblique;
+}
+
+.lista-pessoas{
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.caixa-pessoa{
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+  height: 100px;
+  align-items: flex-start;
   background-color: #ffffff;
+  border: 1px solid rgb(29, 26, 26);
+  border-radius: 8px;
+  padding: 16px 20px;
+}
+.caixa-pessoa:hover {  
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
-.item-pessoa p {
-  margin: 4px 0;
-}
-
-.item-pessoa button {
-  margin-top: 8px;
-  padding: 6px 12px;
+.botao-saida{
+  background-color: #c72c2c;
+  color: #fff;
   border: none;
-  background-color: #5c5c5c;
-  color: white;
-  border-radius: 4px;
+  padding: 5px 10px;
+  border-radius: 10px;
   cursor: pointer;
+  font-weight: 500;
+  transition: backround-color 2s ease;
 }
-
-.item-pessoa button:hover {
-  background-color: #212121;
+.botao-saida:hover {
+  background-color: #630101;
 }
