--- a/frontend/src/ListaPresentes.css
+++ b/frontend/src/ListaPresentes.css
@@ -1,9 +1,9 @@
 .container-lista-presenca {
-  background-color: #2b2828;
+  background-color: #333;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  max-width: 700px; 
+  min-width: 550px;
   margin-right: 80px;
   margin-top: 32px;
   box-shadow: 0px 0px 3px black;
@@ -29,13 +29,14 @@
   gap: 4px;
 }
 
+/*----------------- Conteiner com informações da pessoa ------------ */
 .caixa-pessoa{
   display: flex;
   justify-content: space-between;
-  width: 400px;
+  width: 500px;
   height: 100px;
   align-items: flex-start;
-  background-color: #ffffff;
+  background-color: rgb(255, 255, 255);
   border: 1px solid rgb(29, 26, 26);
   border-radius: 8px;
   padding: 16px 20px;
@@ -44,6 +45,7 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
+/*----------------- Botao Registrar Saida----------------------- */
 .botao-saida{
   background-color: #c72c2c;
   color: #fff;
@@ -56,4 +58,16 @@
 }
 .botao-saida:hover {
   background-color: #630101;
+}
+
+/*----------------- Barra de Pesquisa----------------------- */
+.campo-pesquisa{
+  width: 100%;
+  padding: 8px 3px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  outline: none;
+  transition: border-color 0.2s ease;
 }
