--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,15 @@
+* {
+  margin: 0;
+}
+
 .app-layout {
+  background: #333;
+  background: linear-gradient(
+    90deg,
+    rgba(51, 51, 51, 1) 0%,
+    rgba(117, 74, 74, 1) 77%,
+    rgba(186, 104, 104, 1) 99%
+  );
   display: flex;
   width: 100%;
 }
