--- a/frontend/src/BuscaPorPessoas.css
+++ b/frontend/src/BuscaPorPessoas.css
@@ -5,4 +5,19 @@
   box-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
   min-width: 500px;
   margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: aliceblue;
+}
+h2 {
+  margin-bottom: 24px;
+  padding-bottom: 8px;
+}
+.buscar-pessoa {
+  padding: 8px 3px;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  margin-bottom: 20px;
 }
