--- a/frontend/src/NovaPessoa.css
+++ b/frontend/src/NovaPessoa.css
@@ -53,6 +53,8 @@
   border: none;
   border-radius: 10px;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 10;
 }
 .bottomAlert {
   background-color: rgb(0, 0, 0, 0.5);
