--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,20 +4,24 @@
 
 .app-layout {
   display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   width: 100vw;
 }
 
 .lado-esquerdo {
-  margin-left: 35px;
-  flex: 1;
-  padding: 20px;
+  flex: 2;
+  display: flex;
+  flex-direction: column;
 }
 
 .busca {
   margin: 20px;
-  width: 20vw;
+
   display: flex;
+
+  justify-content: center;
 }
 
 .lado-direito {
@@ -32,7 +36,7 @@
   height: 10rem;
   width: 10rem;
   border-radius: 100%;
-  background-color: #1f1f1f;
+  background-color: #7e7b7b;
   transform: translate(-50%, -50%);
   filter: blur(3rem);
   z-index: -1;
