--- a/frontend/src/ListaPresentes.css
+++ b/frontend/src/ListaPresentes.css
@@ -5,7 +5,7 @@
   box-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
   min-width: 500px;
   margin-right: 80px;
-  max-height: 700px;
+  height: 770px;
   display: flex;
   flex-direction: column;
 
