--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .app-layout {
@@ -18,9 +20,7 @@
 
 .busca {
   margin: 20px;
-
   display: flex;
-
   justify-content: center;
 }
 
