--- a/frontend/src/ListaCadastrados.css
+++ b/frontend/src/ListaCadastrados.css
@@ -26,7 +26,6 @@ ul {
 }
 .visitante {
   background-color: #ffd3da;
-
   width: 20vw;
 }
 
@@ -69,6 +68,7 @@ ul {
   filter: brightness(0.7);
   transition: 0.4s;
   transform: translateY(-2px);
+  z-index: 1;
 }
 
 .topo-dados-cadastrado {
