--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,10 @@
 }
 
 .lado-esquerdo {
-  flex: 1;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
 }
