--- a/frontend/src/Css/NovaPessoa.css
+++ b/frontend/src/Css/NovaPessoa.css
@@ -36,8 +36,9 @@
 
 .caixa-resumo {
   gap: 16px;
-  margin-top: 20px;
-  margin-left: 90px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
 }
 
 .strongBtn {
