--- a/frontend/src/Css/NovaPessoa.css
+++ b/frontend/src/Css/NovaPessoa.css
@@ -56,7 +56,6 @@
   border-radius: 10px;
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
   position: relative;
-  z-index: 10;
 }
 .bottomAlert {
   background-color: rgb(0, 0, 0, 0.5);
@@ -68,6 +67,7 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
+  z-index: 0;
 }
 
 nav {
@@ -192,7 +192,14 @@ h3 {
 
 .obs {
   font-family: "Noto Sans", sans-serif;
-  width: 6rem;
+  width: auto;
+  display: flex;
+  text-align: center;
+}
+
+.obs-text {
+  padding: 0;
+  margin: 0;
 }
 
 .Observações {
