--- a/frontend/src/Css/Alerta.css
+++ b/frontend/src/Css/Alerta.css
@@ -1,8 +1,34 @@
+.alerta-fundo {
+  background-color: rgba(0, 0, 0, 0.329);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .alerta {
-  height: 30%;
-  width: 25%;
+  height: 12rem;
+  width: 20rem;
   border-radius: 15px;
-  position: fixed; /* fica fixo na tela */
-  top: 50%;
-  left: 50%;
+  background-color: white;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 15px #000000;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s;
+}
+
+.alerta:hover {
+  transform: scale(1.03);
+  transition: 0.3s;
+}
+
+.alerta-fechar {
+  color: black;
 }
