--- a/frontend/src/Css/Alerta.css
+++ b/frontend/src/Css/Alerta.css
@@ -3,6 +3,7 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -17,18 +18,33 @@
   background-color: white;
   color: black;
   display: flex;
-  flex-direction: column;
   box-shadow: 0 0 15px #000000;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-}
-
-.alerta:hover {
-  transform: scale(1.03);
+  justify-content: space-around;
   transition: 0.3s;
 }
 
 .alerta-fechar {
-  color: black;
+  border-radius: 10px;
+  border: none;
+  padding: 5px 7px 5px 7px;
+  color: rgb(0, 0, 0);
+}
+
+.alerta-fechar-button {
+  cursor: pointer;
+  border-radius: 10px;
+  border: none;
+  padding: 5px 7px 5px 7px;
+  background-color: rgb(221, 65, 65);
+}
+
+.alerta-fechar-button:hover {
+  transform: scale(1.02);
+  transition: 0.3s;
+}
+.atention {
+  display: flex;
+  align-items: center;
+  height: 20%;
+  width: 100%;
 }
