--- a/frontend/src/Css/FiltroCalendario.css
+++ b/frontend/src/Css/FiltroCalendario.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: auto;
   padding: 1rem;
-  background-color: rgb(255, 0, 0);
+  background-color: #333;
   position: relative;
 }
 
@@ -32,37 +32,35 @@
   position: absolute;
   top: 0;
   right: 0;
-  transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
+  transform: translate(60%, -0%);
+  background-color: rgba(255, 255, 255, 0.267);
+  width: 18.5vw;
   padding: 10px;
-  border-radius: 20px;
-  display: flex;
-  align-items: start;
-  justify-content: center;
-  transition: 0.5s;
-  z-index: 10;
+  border-radius: 10px;
+  z-index: 999;
 }
 
 .botao-calendario {
-  margin-left: 10px;
+  width: 100%;
+  margin-top: 8px;
   border-radius: 5px;
-  height: 2rem;
-  width: 2rem;
+  height: 1.5rem;
+  width: 3.5rem;
   border: none;
-  background-color: #e23601;
+  background-color: #000000;
   color: white;
   cursor: pointer;
   transition: 0.2s;
 }
-
 .botao-calendario:hover {
   transform: scale(1.1);
   transition: 0.2s;
+  background-color: green;
 }
 
 .rdrCalendarWrapper {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  background-color: #888;
+  background-color: #ffffff;
 }
 
 .rdrMonthAndYearPickers {
