--- a/frontend/src/Css/ListaCadastrados.css
+++ b/frontend/src/Css/ListaCadastrados.css
@@ -3,6 +3,10 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.titulo-cadastrados {
+  padding-top: 2rem;
+}
+
 ul {
   list-style: none;
   padding-left: 20px;
@@ -11,9 +15,9 @@ ul {
 
 .container-cadastro {
   position: relative;
-  padding: 2rem;
+
   max-height: auto;
-  width: 23%;
+  min-width: 500px;
   background-color: #333;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
