--- a/frontend/src/Css/ListaPresentes.css
+++ b/frontend/src/Css/ListaPresentes.css
@@ -16,13 +16,16 @@
   padding-bottom: 8px;
   text-align: center;
 }
-
+::placeholder {
+  padding-left: 10px;
+}
 .nenhum-visitante {
   color: #d3d3d3;
   font-style: oblique;
 }
 
 .lista-pessoas {
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   gap: 4px;
