--- a/frontend/src/Css/Alerta.css
+++ b/frontend/src/Css/Alerta.css
@@ -3,12 +3,12 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-
   align-items: center;
   justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
+  transition: 1s;
 }
 
 .alerta {
@@ -19,7 +19,7 @@
   color: black;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 0 15px #000000;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: 0.3s;
 }
 
