--- a/frontend/src/Css/Editar.css
+++ b/frontend/src/Css/Editar.css
@@ -46,6 +46,24 @@
   padding: 1rem;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(255, 255, 255);
   color: black;
+}
+
+.editar-caixa-input {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+}
+
+#editar-input-observacao {
+  height: 4.5rem;
+  font-size: 1rem;
+  padding: 0.2rem;
+}
+
+#editar-input-observacao:focus {
+  outline: none;
+  border-color: rgb(0, 0, 0);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
