--- a/frontend/src/Css/NovaPessoa.css
+++ b/frontend/src/Css/NovaPessoa.css
@@ -261,15 +261,16 @@ input {
   background-color: rgb(255, 255, 255);
   height: 3vh;
   font-size: 1rem;
+  transition: all 0.2s ease-in-out;
 }
 
 input:focus {
   outline: none;
   box-shadow: none;
   border-bottom: 2px solid #322f41;
-  transform: scale(1.01);
   transition: all 0.2s ease-in-out;
   background-color: aliceblue;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .SaidaInfo {
