--- a/frontend/src/Css/ListaCadastrados.css
+++ b/frontend/src/Css/ListaCadastrados.css
@@ -69,6 +69,8 @@ ul {
   margin-bottom: 0.5rem;
   transition: 0.4s;
   cursor: pointer;
+
+  flex-basis: 1rem;
 }
 
 .caixa-pessoa-cadastrada:hover {
