teste css modular

--- a/frontend/src/Css/Alerta.module.css
+++ b/frontend/src/Css/Alerta.module.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   transition: 0.3s;
+  user-select: none;
 }
 
 .alerta-fechar-button {
