--- a/frontend/src/Css/Pessoas.module.css
+++ b/frontend/src/Css/Pessoas.module.css
@@ -49,3 +49,18 @@
   margin: 0.2rem;
   padding: 0;
 }
+
+.botao-saida {
+  background-color: #c72c2c;
+  width: 7rem;
+  color: #fff;
+  border: none;
+  padding: 3px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 500px;
+  font-size: 13px;
+}
+.botao-saida:hover {
+  background-color: #630101;
+}
