--- a/frontend/src/Css/Pessoas.module.css
+++ b/frontend/src/Css/Pessoas.module.css
@@ -1,6 +1,7 @@
 .caixa-pessoa-cadastrada {
   display: flex;
   flex-direction: column;
+  position: relative;
   width: 100%;
   height: 15rem;
   align-items: flex-start;
@@ -16,9 +17,8 @@
 }
 
 .caixa-pessoa-cadastrada:hover {
-  filter: brightness(0.7);
   transition: 0.4s;
-  transform: translateY(-2px);
+  transform: scale(1.015);
 }
 
 .topo-dados-cadastrado {
@@ -63,4 +63,24 @@
 }
 .botao-saida:hover {
   background-color: #630101;
+}
+
+.pessoa-editar {
+  position: absolute;
+  bottom: 5px;
+  right: 7px;
+  height: 1.7rem;
+  width: 1.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #d1d1d1;
+  border-radius: 100px;
+  transition: 0.3s;
+}
+
+.pessoa-editar:hover {
+  transition: 0.3s;
+  transform: scale(1.1);
+  transform: rotate(-90deg);
 }
